--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.3.2",
     "leaflet.vectorgrid": "^1.3.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
