--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@carto/carto.js": "^4.2.1",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "chroma-js": "^1.4.1",
     "core-js": "^3.6.5",
+    "georaster": "^1.5.4",
+    "georaster-layer-for-leaflet": "^2.0.2",
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.3.2",
     "leaflet.vectorgrid": "^1.3.0",
+    "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
