--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "georaster": "^1.5.4",
     "georaster-layer-for-leaflet": "^2.0.2",
     "leaflet": "^1.7.1",
+    "leaflet-easybutton": "^2.4.0",
     "leaflet-geosearch": "^3.3.2",
     "leaflet.vectorgrid": "^1.3.0",
     "lodash": "^4.17.21",
