--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@carto/carto.js": "^4.0.0",
     "axios": "^0.21.1",
-    "chart.js": "^3.5.1",
+    "chart.js": "^2.9.4",
     "chroma-js": "^1.4.1",
     "core-js": "^3.6.5",
     "country-reverse-geocoding": "^0.2.2",
@@ -25,6 +25,7 @@
     "pdfmake": "^0.2.2",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.9.0",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
   },
