--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@carto/carto.js": "^4.0.0",
+    "adler-32": "^1.3.0",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "chroma-js": "^1.4.1",
