--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
   "dependencies": {
     "@carto/carto.js": "^4.0.0",
     "adler-32": "^1.3.0",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "chart.js": "^2.9.4",
     "chroma-js": "^1.4.1",
     "core-js": "^3.6.5",
     "country-reverse-geocoding": "^0.2.2",
     "esri-leaflet-geocoder": "^2.0.2",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "georaster": "^1.5.4",
     "georaster-layer-for-leaflet": "^3.0.1",
+    "https": "^1.0.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-geosearch": "^3.5.0",
     "leaflet.vectorgrid": "^1.3.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "pdfmake": "^0.2.2",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.9.0",
