--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "https": "^1.0.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
+    "leaflet-arrowheads": "^1.2.3",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-geosearch": "^3.5.0",
     "leaflet.vectorgrid": "^1.3.0",
