--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiat_front",
+  "name": "wiat_front_1-1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,30 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@carto/carto.js": "^4.0.0",
+    "@carto/carto.js": "^4.2.1",
     "adler-32": "^1.3.0",
-    "axios": "^0.24.0",
-    "chart.js": "^2.9.4",
-    "chroma-js": "^1.4.1",
-    "core-js": "^3.6.5",
+    "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
+    "chroma-js": "^2.4.2",
     "country-reverse-geocoding": "^0.2.2",
-    "esri-leaflet-geocoder": "^2.0.2",
     "exceljs": "^4.3.0",
-    "file-saver": "^2.0.5",
-    "georaster": "^1.5.4",
-    "georaster-layer-for-leaflet": "^3.0.1",
-    "https": "^1.0.0",
-    "is-sea": "^0.3.1",
-    "jquery": "^3.6.0",
-    "katex": "^0.15.1",
+    "georaster-layer-for-leaflet": "^3.7.1",
+    "katex": "^0.15.3",
     "leaflet": "^1.7.1",
     "leaflet-arrowheads": "^1.2.3",
     "leaflet-easybutton": "^2.4.0",
-    "leaflet-geosearch": "^3.5.0",
-    "leaflet.vectorgrid": "^1.3.0",
+    "leaflet-geometryutil": "^0.10.0",
+    "leaflet-geosearch": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "pdfmake": "^0.2.2",
+    "pdfmake": "^0.2.4",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.9.0",
     "vue-chartjs": "^3.5.1",
@@ -52,5 +45,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "engines": {
+    "npm": ">=8.3.0",
+    "node": ">=16.0.0"
+  }
 }
