--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "adler-32": "^1.3.0",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "chroma-js": "^2.4.2",
     "country-reverse-geocoding": "^0.2.2",
     "exceljs": "^4.3.0",
