--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "chroma-js": "^2.4.2",
     "country-reverse-geocoding": "^0.2.2",
     "exceljs": "^4.3.0",
+    "georaster": "^1.5.6",
     "georaster-layer-for-leaflet": "^3.7.1",
+    "katex": "^0.15.3",
     "leaflet": "^1.7.1",
     "leaflet-arrowheads": "^1.2.3",
     "leaflet-easybutton": "^2.4.0",
