--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartjs-plugin-datalabels": "^2.0.0",
     "chroma-js": "^2.4.2",
     "country-reverse-geocoding": "^0.2.2",
+    "deep-object-diff": "^1.1.9",
     "exceljs": "^4.3.0",
     "georaster": "^1.5.6",
     "georaster-layer-for-leaflet": "^3.7.1",
