--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "pdfmake": "^0.2.4",
     "vue": "^2.6.11",
     "vue-chartjs": "^4.0.5",
+    "vue-cookie-law": "^1.13.3",
+    "vue-gtag": "^1.16.1",
     "vue-katex": "^0.5.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
